# Project_agent_NEO

./: .coverage  .coveragerc  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  01_Vision-Pack_v2.json  02_Governance-Pack_v2.json  03_Security-Pack_v2.json  04_Persona-Pack_v2.json  05_Intake-Pack_v2.json  06_Skills-Pack_v2.json  07_Planning-Pack_v2.json  08_Memory-Schema_v2.json  09_Telemetry-Pack_v2.json  10_Domain-Pack_v2.json  10_Prompt-Pack_v2.json  11_Workflow-Pack_v2.json  12_Knowledge-Pack_v2.json  13_Tools-Pack_v2.json  14_Risk-Pack_v2.json  15_Observability+Telemetry_Spec_v2.json  15_Quality-Gates_v2.json  16_Observability-Pack_v2.json  17_Lifecycle-Pack_v2.json  18_Reporting-Pack_v2.json  19_Release-Pack_v2.json  20_Changelog-Pack_v2.json  AGENTS.md  ASSURANCE.md  BUILD_PLAYBOOK.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HOTFIX_TEMPLATE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NEO_Codex_ContextSync_Prompt.md  (+41 more)
.github/: PULL_REQUEST_TEMPLATE.md
01_README_Directory-Map_v2/: AGENTIC_SPRINT_SSOT.md  slot_raci_map.json
12_changelog/: CHANGELOG.jsonl
_generated/: _last_build.json
_tmp_build/: intake.json
_tmp_build4/: 01_README+Directory-Map_v2.json  02_Global-Instructions_v2.json  03_Operating-Rules_v2.json  04_Governance+Risk-Register_v2.json  05_Safety+Privacy_Guardrails_v2.json  06_Role-Recipes_Index_v2.json  07_Subagent_Role-Recipes_v2.json  08_Memory-Schema_v2.json  09_Agent-Manifests_Catalog_v2.json  10_Prompt-Pack_v2.json  11_Workflow-Pack_v2.json  12_Tool+Data-Registry_v2.json  13_Knowledge-Graph+RAG_Config_v2.json  (+7 more)
(+675 files in other folders)
